syntax = "proto3";
package ms2db;
option cc_generic_services = true;

message LoginRequest
{
  string account = 1;
  string password = 2;
}

message LoginResponse
{
}

service LoginService {
  rpc Login (LoginRequest) returns (LoginResponse);
}